welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
for(k<-1 to 20){
^